contrib/rook/ceph-dash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph-dash
  namespace: rook-ceph
spec:
  type: NodePort
  selector:
    app: ceph-dash
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
